# zammad-ai-agent

./: .env.example  .gitignore  README.md  agente_zammad.py  pyproject.toml  system_prompt.example.md
tests/: test_tools.py
