[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zammad-ai-agent"
version = "1.0.0"
description = "Conversational AI agent for a Zammad helpdesk (Anthropic tool use + streaming)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Marcos Leal" }]
keywords = ["zammad", "anthropic", "claude", "ai-agent", "tool-use", "helpdesk"]
dependencies = ["anthropic==0.40.0", "requests==2.32.3"]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "ruff==0.6.9"]

[project.scripts]
zammad-agent = "agente_zammad:main"

[tool.setuptools]
py-modules = ["agente_zammad"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
